# doc/api-spec.yaml
@@ -111,7 +111,7 @@ paths:
           $ref: '#/components/responses/ServerError'
 
   # 配置管理接口组
-  /api/find_settings:
+  /api/find_setting:
     get:
       summary: 获取配置信息
       description: 通过GET方式获取指定目录中的配置文件内容
@@ -139,7 +139,7 @@ paths:
         '500':
           $ref: '#/components/responses/ServerError'
 
-  /api/save_settings:
+  /api/save_setting:
     post:
       summary: 保存配置
       description: 将配置信息保存到指定目录
